2006-10-17  Michael Goffioul  <michael.goffioul@swing.be>

	* (OCTAVE_CXX_PREPENDS_UNDERSCORE, OCTAVE_CXX_ABI): Use $ac_objext
	instead of assuming .o.

2006-10-17  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for curl_easy_escap instead of
	curl_global_init.

2006-10-13  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in [_MSC_VER]: Disable some warnings.
	(*-*-msdos): New case for shared libraries.
	(LIBPRE): New variable.
	* Makeconf.in: Substitute it.

2006-10-12  John W. Eaton  <jwe@octave.org>

	* configure.in (AH_BOTTOM): Don't unconditionally #define
	OCTAVE_HAVE_POSIX_FILESYSTEM followed by a conditional #undef
	OCTAVE_HAVE_POSIX_FILESYSTEM since autoconf is commenting out the
	#undef.

2006-10-09  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (CURL_LIBS, do-subst-config-vals):
	Substitute CURL_LIBS.

	* configure.in: Check for libcurl.

2006-10-04  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (library_path_var): Substitute value from configure.
	(do-subst-script-vals): Add library_path_var to the list.
	* run-octave.in: Substitute value here.

2006-10-03  John W. Eaton  <jwe@octave.org>

	* configure.in: Warn if PCRE library is not found.

	* configure.in: Include CAMD_LIBS, AMD_LIBS, and REGEX_LIBS in the
	summary.

2006-10-03  David Bateman  <dbateman@free.fr>

	* configure.in: Check for libcamd.
	* Makeconf.in (CAMD_LIBS): New variable.

2006-09-27  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in [--mex]: Include -I. in incflags.
	From Soren Hauberg <soren@hauberg.org>.

2006-09-26  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CONFIG_FILES):
	Remove doc/interpreter/images/Makefile from the list.

2006-09-16  John W. Eaton  <jwe@octave.org>

	* octave-bug.in: Delete LIBPLPLOT variables.

2006-09-15  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for locale.h and setlocale.

2006-09-13  Christopher Hulbert  <cchgroupmail@gmail.com>

	* run-octave.in (LD_LIBRARY_PATH): Also append LD_LIBRARY_PATH